--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 </div>
             </section>
             <!--Contact Section End-->
-            <section class="social-media" id="social-media">
+            <section class="social-media padd-15" id="social-media">
                 <div class="container">
                     <div class="row">
                         <div class="section-tittle padd-15">
